#69 Refactor Chunk, DepthVector, MapControl. Fix bug with duplicate equipments again.