@@ -5,7 +5,6 @@ import cc.abro.orchengine.gameobject.components.render.AnimationRender;
 import cc.abro.orchengine.gameobject.components.render.SpriteRender;
 import cc.abro.orchengine.resources.textures.Texture;
 
-import java.util.Arrays;
 import java.util.List;
 
 public class GameObjectFactory {
@@ -18,26 +17,26 @@ public class GameObjectFactory {
         return create(x, y, 0);
     }
 
-    public static GameObject create(double x, double y, int depth) {
-        return new GameObject(Arrays.asList(new Position(x, y, depth)));
+    public static GameObject create(double x, double y, int z) {
+        return new GameObject(List.of(new Position(x, y, z)));
     }
 
-    public static GameObject create(double x, double y, int depth, double directionDraw) {
-        GameObject gameObject = create(x, y, depth);
+    public static GameObject create(double x, double y, int z, double directionDraw) {
+        GameObject gameObject = create(x, y, z);
         gameObject.getComponent(Position.class).setDirectionDraw(directionDraw);
 
         return gameObject;
     }
 
-    public static GameObject create(double x, double y, int depth, double directionDraw, Texture texture) {
-        GameObject gameObject = create(x, y, depth, directionDraw);
+    public static GameObject create(double x, double y, int z, double directionDraw, Texture texture) {
+        GameObject gameObject = create(x, y, z, directionDraw);
         gameObject.setComponent(new SpriteRender(texture));
 
         return gameObject;
     }
 
-    public static GameObject create(double x, double y, int depth, double directionDraw, List<Texture> textures) {
-        GameObject gameObject = create(x, y, depth, directionDraw);
+    public static GameObject create(double x, double y, int z, double directionDraw, List<Texture> textures) {
+        GameObject gameObject = create(x, y, z, directionDraw);
         gameObject.setComponent(new AnimationRender(textures));
 
         return gameObject;
